test/integration/bad/includes/expr.stan
model {
   1 ~ #include expr.inc

}
